--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,8 @@ dependencies = [
 
 [tool.uv.sources]
 tensorflow = { url = "https://storage.googleapis.com/tensorflow/versions/2.16.2/tensorflow-2.16.2-cp312-cp312-macosx_10_15_x86_64.whl" }
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.4",
+]
