fix(data): rewrote `download.py` and implemented tests (`test_download.py`)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,6 @@ tensorflow = { url = "https://storage.googleapis.com/tensorflow/versions/2.16.2/
 
 [dependency-groups]
 dev = [
+    "pytest-mock>=3.14.0",
     "pytest>=8.3.4",
 ]
