--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastparquet>=2024.11.0",
     "ipykernel>=6.29.5",
     "kagglehub>=0.3.6",
     "matplotlib>=3.9.3",
     "pandas>=2.2.3",
+    "pyarrow>=18.1.0",
     "python-dotenv>=1.0.1",
+    "scikit-learn>=1.6.0",
     "tensorflow",
 ]
 
