--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,12 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastparquet>=2024.11.0",
-    "ipykernel>=6.29.5",
     "kagglehub>=0.3.6",
     "matplotlib>=3.9.3",
     "pandas>=2.2.3",
-    "pyarrow>=18.1.0",
-    "python-dotenv>=1.0.1",
     "scikit-learn>=1.6.0",
-    "tensorflow",
+    "tensorflow==2.16.1",
 ]
-
-[tool.uv.sources]
-tensorflow = { url = "https://storage.googleapis.com/tensorflow/versions/2.16.2/tensorflow-2.16.2-cp312-cp312-macosx_10_15_x86_64.whl" }
 
 [dependency-groups]
 dev = [
