--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ requires-python = ">=3.12"
 dependencies = [
     "fastparquet>=2024.11.0",
     "kagglehub>=0.3.6",
+    "logfire>=3.4.0",
     "matplotlib>=3.9.3",
     "pandas>=2.2.3",
+    "pydantic>=2.10.6",
     "scikit-learn>=1.6.0",
     "tensorflow==2.16.1",
 ]
