--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastparquet>=2024.11.0",
-    "kagglehub>=0.3.6",
-    "logfire>=3.4.0",
+    "kagglehub==0.3.6",
     "matplotlib>=3.9.3",
     "pandas>=2.2.3",
     "pydantic>=2.10.6",
