--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# Ignore contents of data directories but not the directories themselves
+data/raw/*
+data/processed/*
+data/processed/params/*
+models/*
+logs/*
+
+# Don't ignore the .gitkeep files
+!data/raw/.gitkeep
+!data/processed/.gitkeep
+!data/processed/params/.gitkeep
+!models/.gitkeep
+!logs/.gitkeep
+
+
+
 # Mac OS-specific storage files
 .DS_Store
 
