--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # Ignore contents of data directories but not the directories themselves
-data/processed/**
+data/processed/*
 
 # Don't ignore the .gitkeep files
-!data/processed/.gitkeep
 !data/processed/params/.gitkeep
 
 # Ignore all csv files
