--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ data/raw/*
 data/processed/*
 !data/raw/.gitkeep
 !data/processed/.gitkeep
+!data/processed/params/.gitkeep
 
 # Ignore all log files
 *.log
